--- a/wf-connect/package.json
+++ b/wf-connect/package.json
@@ -12,7 +12,8 @@
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-flip-move": "^3.0.5"
+    "react-flip-move": "^3.0.5",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "eslint": "^9",
