--- a/wf-connect/package.json
+++ b/wf-connect/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.5.0",
+    "@types/three": "^0.182.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-flip-move": "^3.0.5",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "eslint": "^9",
